[project]
name = "artsauna"
version = "0.1.0"
description = "Integration for Home Assistant for Artsauna Home Sauna"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleak>=2.0.0",
    "bleak-retry-connector>=4.4.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
