[project]
name = "artsauna"
version = "0.1.0"
description = "Integration for Home Assistant for Artsauna Home Sauna"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bidict>=0.23.1",
    "bleak>=2.0.0",
    "bleak-retry-connector>=4.4.4",
    "homeassistant>=2025.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
